spade-tests/src/snapshots/spade_tests__parser__array_shorthand_missing_length.snap
---
source: spade-tests/src/parser.rs
---
fn test() {
    let length = 24;
    let _ = [1u2;];
}


error: Unexpected `]`, expected expression
  ┌─ testinput:3:18
  │
3 │     let _ = [1u2;];
  │                  ^ expected expression here

error: Type of expression is not fully known
  ┌─ testinput:2:18
  │
2 │     let length = 24;
  │                  ^^ The type of this expression is not fully known
  │
  = note: Found incomplete type: Number<_>
